src/objects/Sighten_Callback_Log__c.object
<CustomObject>
    <description>This object will be used to create log files for the purposes of debugging any possible issues with the Sighten Callback process for updating credit check and contract statuses</description>
    <fields>
        <fullName>Error_Detail__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Error Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedId__c</fullName>
        <description>The Salesforce record id of the object that triggered the callback.</description>
        <inlineHelpText>The Salesforce record id of the object that triggered the callback.</inlineHelpText>
        <label>RelatedId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Sighten Callback Log</label>
    <nameField>
        <displayFormat>SCL-{000000}</displayFormat>
        <label>Sighten Callback Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sighten Callback Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>